overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,7 @@ html {
 }
 
 body {
-    /* background-color: var(--main-white); */
-    background-color: red;
+    background-color: var(--main-white);
     color:            var(--main-black);
     font-family:      Arial, Helvetica, sans-serif;
     font-size:        1.6rem;
